--- a/src/index.html
+++ b/src/index.html
@@ -24,68 +24,86 @@
 
       <br> <br>
       <div class="welcome-page-section">
-        <div class="row justify-content-center">
-          <div class="col text-center">
-            <h1>Welcome to our ATM</h1>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col text-center">
-            <div class="row justify-content-center">
-              <div class="col-xs-12 col-sm-6 col-lg-4">
+
+        <div class="card text-center">
+          <h1 class="card-header">Welcome to our ATM</h1>
+          <div class="card-body">
+            <br>
+
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-lg-12">
                 <label class="fw-semibold fs-6">Please Enter Account Number:</label>
-                <input type="text" class="form-control">
               </div>
             </div>
+
+            <div class="row text-center">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
+                <input type="text" class="form-control"><br>
+                <a href="#" class="btn btn-primary">Go</a>
+              </div>
+            </div>
+            <br>
+          </div>
+        </div>
+        <br><br>
+      </div>
+
+      <div class="atm-menu-section">
+
+        <div class="card">
+          <h5 class="card-header">ATM Menu:</h5>
+          <div class="card-body">
+            <div class="row justify-content-center">
+              <div class="col-6">
+                <div class="list-group">
+                  <button type="button" class="list-group-item list-group-item-action">WITHDRAW</button>
+                  <button type="button" class="list-group-item list-group-item-action">DEPOSIT</button>
+                  <button type="button" class="list-group-item list-group-item-action">BALANCE ENQUIRY</button>
+                  <button type="button" class="list-group-item list-group-item-action">CANCEL</button>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="list-group">
+                  <button type="button" class="list-group-item list-group-item-action">DETAILS</button>
+                  <button type="button" class="list-group-item list-group-item-action">OTHER</button>
+                  <button type="button" class="list-group-item list-group-item-action">CHANGE PIN</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br><br>
+      </div>
+
+      <div class="withdraw-section">
+        <div class="card">
+          <h5 class="card-header">Withdrawal</h5>
+          <div class="card-body">
+            <h5 class="card-title">Current Balance: </h5>
 
             <br>
 
-            <div class="row justify-content-center">
-              <div class="col-6">
-                <button type="button" class="btn btn-success">submit</button>
+            <div class="col-6">
+              <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action">DETAILS</button>
+                <button type="button" class="list-group-item list-group-item-action">OTHER</button>
+                <button type="button" class="list-group-item list-group-item-action">CHANGE PIN</button>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
 
-      <br><br>
-
-      <div class="atm-menu-section">
-        <div class="row text-left">
-          <div class="col-6">
-            <h5>ATM Menu:</h5>
-          </div>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-6">
-            <div class="list-group">
-              <button type="button" class="list-group-item list-group-item-action">WITHDRAW</button>
-              <button type="button" class="list-group-item list-group-item-action">DEPOSIT</button>
-              <button type="button" class="list-group-item list-group-item-action">BALANCE ENQUIRY</button>
-              <button type="button" class="list-group-item list-group-item-action">CANCEL</button>
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="list-group">
-              <button type="button" class="list-group-item list-group-item-action">DETAILS</button>
-              <button type="button" class="list-group-item list-group-item-action">OTHER</button>
-              <button type="button" class="list-group-item list-group-item-action">CHANGE PIN</button>
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <label class="fw-semibold fs-6">Please Enter Account Number:</label>
+              <input type="text" class="form-control">
             </div>
           </div>
         </div>
+        <br><br>
       </div>
-
-      <br><br>
-
-
-
-
-
     </div>
+
+    <br><br>
   </div>
+
 
 
 </body>
